# zotero-mcp-server

./: README.md  pyproject.toml  requirements.txt
src/: server.py
